updated mongoose schema and connected mongodb atlas

--- a/memory-threads-app/jsconfig.json
+++ b/memory-threads-app/jsconfig.json
@@ -1,7 +1,12 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@components/*": ["./components/*"],
+      "@app/*": ["./pages/*"],
+      "@lib/*": ["./lib/*"],
+      "@models/*": ["./models/*"]
     }
   }
 }
