--- a/memory-threads-app/package.json
+++ b/memory-threads-app/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "eslint-plugin-mocha": "^10.2.0",
+    "mocha": "^10.2.0",
+    "mongoose": "^8.0.0",
+    "next": "14.0.2",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
