added first form
created api endpoint to db and accepted requests from the form

--- a/memory-threads-app/jsconfig.json
+++ b/memory-threads-app/jsconfig.json
@@ -6,7 +6,8 @@
       "@components/*": ["./components/*"],
       "@app/*": ["./pages/*"],
       "@lib/*": ["./lib/*"],
-      "@models/*": ["./models/*"]
+      "@models/*": ["./models/*"],
+      "@api/*": ["./app/api/*"],
     }
   }
 }
