--- a/memory-threads-app/package.json
+++ b/memory-threads-app/package.json
@@ -17,7 +17,10 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.0.2"
+    "eslint": "^8.7.0",
+    "eslint-config-next": "14.0.2",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "prettier": "^2.5.1"
   }
 }
