prod bug solve take 3

--- a/memory-threads-app/.eslintrc.json
+++ b/memory-threads-app/.eslintrc.json
@@ -32,6 +32,7 @@
     "func-call-spacing": ["error"],
     "no-lonely-if": ["error"],
     "array-bracket-spacing": ["error"],
-    "no-console": ["off"]
+    "no-console": ["off"],
+    "react-hooks/rules-of-hooks": "off"
   }
 }
