added home page with styling

--- a/memory-threads-app/jsconfig.json
+++ b/memory-threads-app/jsconfig.json
@@ -8,6 +8,7 @@
       "@lib/*": ["./lib/*"],
       "@models/*": ["./models/*"],
       "@api/*": ["./app/api/*"],
+      "@public/*": ["./public/*"]
     }
   }
 }
