--- a/memory-threads-app/package.json
+++ b/memory-threads-app/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^4.27.1",
     "eslint-plugin-mocha": "^10.2.0",
     "mocha": "^10.2.0",
+    "mongo-sanitize": "^1.1.0",
     "mongoose": "^8.0.0",
     "next": "14.0.2",
     "react": "^18",
